--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@ nav ul li a {
 }
 </style>
 
-<body bgcolor="#04D804">
+<body bgcolor="#04EE04">
     <nav>
         <ul>
             <li><a href="index.html">主页</a></li>
@@ -59,14 +59,14 @@ nav ul li a {
         </ul>
     </nav>
     <h1 align="center">申请表</h1>
-    <hr size="4" color="white">
+    <hr size="8" color="white">
     姓名:<input type="text" name="yourname" maxlength="10"><br>
         感兴趣的职位<br>
         <input type="checkbox" name="design" >Web设计人员&nbsp;
         <input type="checkbox" name="command" >Web管理人员&nbsp;
         <input type="checkbox" name="explore" >Web开发人员<br>
         其他要求：<br>
-        <textarea rows="4" cols="150">包括薪水待遇，工作地点等</textarea><br>
+        <textarea rows="9" cols="190">包括薪水待遇，工作地点等</textarea><br>
         <input type="checkbox" >发送确认消息<br>
         <select name="经验">
             <option value="yes">有经验</option>
